@@ -1,3 +1,7 @@
+2020-09-21         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* Makefile.tst: Rebuilt.
+
 2020-08-17         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* Makefile.tst: Rebuilt.
