@@ -1,3 +1,9 @@
+2020-09-21         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* Makefile.am (EXTRA_DIST): New test iolint. Sort the list of
+	files beginning with 'i'.
+	* iolint.awk, iolint.ok: New files.
+
 2020-09-04         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* id.ok: Updated after code changes.
